--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <title>FitMe</title>
   </head>
   <body class="page-wrapper">
